// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Wallet Card should render 1`] = `
<div>
  <div
    class="w-64 inline-block"
    data-testid="WalletCard__D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
  >
    <div
      class="h-48"
    >
      <button
        class="Cardstyles__CardButton-sc-ajtauu-0 jtRXYU"
        data-testid="Card"
        type="button"
      >
        <div
          class="flex relative flex-col justify-between p-5 h-full"
        >
          <div
            class="flex items-center space-x-4"
          >
            <div
              class="-space-x-1 whitespace-nowrap"
            >
              <div
                aria-label="ARK Devnet"
                class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700 ring-theme-background"
                data-testid="NetworkIcon-ARK-ark.devnet"
              >
                <div
                  class="sc-bdnxRM NjstW"
                  data-testid="NetworkIcon__icon"
                  height="20"
                  width="20"
                >
                  <svg>
                    ark.svg
                  </svg>
                </div>
              </div>
              <div
                class="Avatar__AvatarWrapper-sc-18vw8a4-0 kkxZqy flex-shrink-0"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                >
                  <img
                    alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  />
                </div>
              </div>
            </div>
            <span
              class="font-semibold truncate text-theme-secondary-text"
            >
              ARK Wallet 1
            </span>
          </div>
          <span
            class="whitespace-nowrap mt-auto text-lg font-bold text-theme-text"
            data-testid="AmountCrypto"
          >
            33.75089801 DARK
          </span>
          <span
            class="inline-flex overflow-hidden mt-1 text-xs font-semibold whitespace-nowrap text-theme-secondary-text no-ligatures"
          >
            D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
          </span>
        </div>
        <div
          class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
        >
          <div
            class="inline-block p-1 text-theme-secondary-700"
            data-testid="WalletIcon__Ledger"
          >
            <div
              class="sc-bdnxRM NjstW"
              height="20"
              width="20"
            >
              <svg>
                ledger.svg
              </svg>
            </div>
          </div>
          <div
            class="inline-block p-1 text-theme-warning-400"
            data-testid="WalletIcon__Starred"
          >
            <div
              class="sc-bdnxRM NjstW"
              height="20"
              width="20"
            >
              <svg>
                star-filled.svg
              </svg>
            </div>
          </div>
          <div
            class="inline-block p-1 text-theme-secondary-700"
            data-testid="WalletIcon__Multisignature"
          >
            <div
              class="sc-bdnxRM NjstW"
              height="20"
              width="20"
            >
              <svg>
                multisignature.svg
              </svg>
            </div>
          </div>
          <div
            class="inline-block p-1 text-theme-secondary-700"
            data-testid="WalletIcon__TestNetwork"
          >
            <div
              class="sc-bdnxRM NjstW"
              height="20"
              width="20"
            >
              <svg>
                code.svg
              </svg>
            </div>
          </div>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Wallet Card should render blank 1`] = `
<div>
  <div
    class="w-64 inline-block"
    data-testid="WalletCard__blank"
  >
    <div
      class="h-48"
    >
      <button
        class="Cardstyles__CardButton-sc-ajtauu-0 DdwDL"
        data-testid="Card"
        tabindex="-1"
        type="button"
      >
        <div
          class="flex flex-col justify-between p-5 h-full"
        >
          <div
            class="flex -space-x-1"
          >
            <div
              class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb bg-theme-background border-theme-primary-100 dark:border-theme-secondary-800 ring-theme-background"
            />
            <div
              class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb bg-theme-background border-theme-primary-100 dark:border-theme-secondary-800 ring-theme-background"
            />
          </div>
          <div
            class="mt-auto text-lg font-bold text-theme-primary-100 dark:text-theme-secondary-800"
          >
            Balance
          </div>
          <span
            class="mt-1 text-xs font-semibold truncate text-theme-primary-100 dark:text-theme-secondary-800"
          >
            Address
          </span>
        </div>
        <div
          class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Wallet Card should render blank with ledger display type 1`] = `
<div>
  <div
    class="w-64 inline-block"
    data-testid="WalletCard__blank"
  >
    <div
      class="h-48"
    >
      <button
        class="Cardstyles__CardButton-sc-ajtauu-0 DdwDL"
        data-testid="Card"
        tabindex="-1"
        type="button"
      >
        <div
          class="flex flex-col justify-between p-5 h-full"
        >
          <div
            class="flex -space-x-1"
          >
            <div
              class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb bg-theme-background border-theme-primary-100 dark:border-theme-secondary-800 ring-theme-background"
            />
            <div
              class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb bg-theme-background border-theme-primary-100 dark:border-theme-secondary-800 ring-theme-background"
            />
          </div>
          <div
            class="mt-auto text-lg font-bold text-theme-primary-100 dark:text-theme-secondary-800"
          >
            Balance
          </div>
          <span
            class="mt-1 text-xs font-semibold truncate text-theme-primary-100 dark:text-theme-secondary-800"
          >
            Address
          </span>
        </div>
        <div
          class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
        >
          <div
            class="sc-bdnxRM AFVmm text-theme-primary-100 dark:text-theme-secondary-800"
            height="16"
            width="16"
          >
            <svg>
              ledger.svg
            </svg>
          </div>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Wallet Card should render blank with starred display type 1`] = `
<div>
  <div
    class="w-64 inline-block"
    data-testid="WalletCard__blank"
  >
    <div
      class="h-48"
    >
      <button
        class="Cardstyles__CardButton-sc-ajtauu-0 DdwDL"
        data-testid="Card"
        tabindex="-1"
        type="button"
      >
        <div
          class="flex flex-col justify-between p-5 h-full"
        >
          <div
            class="flex -space-x-1"
          >
            <div
              class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb bg-theme-background border-theme-primary-100 dark:border-theme-secondary-800 ring-theme-background"
            />
            <div
              class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb bg-theme-background border-theme-primary-100 dark:border-theme-secondary-800 ring-theme-background"
            />
          </div>
          <div
            class="mt-auto text-lg font-bold text-theme-primary-100 dark:text-theme-secondary-800"
          >
            Balance
          </div>
          <span
            class="mt-1 text-xs font-semibold truncate text-theme-primary-100 dark:text-theme-secondary-800"
          >
            Address
          </span>
        </div>
        <div
          class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
        >
          <div
            class="sc-bdnxRM AFVmm text-theme-primary-100 dark:text-theme-secondary-800"
            height="16"
            width="16"
          >
            <svg>
              star-filled.svg
            </svg>
          </div>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Wallet Card should render loading state 1`] = `
<div>
  <div
    class="bg-theme-background"
  >
    <button
      class="Cardstyles__CardButton-sc-ajtauu-0 DdwDL"
      data-testid="Card"
      tabindex="-1"
      type="button"
    >
      <div
        class="flex relative flex-col justify-between p-5 h-full"
        data-testid="WalletCard__skeleton"
      >
        <div
          class="flex items-center"
        >
          <div
            class="flex items-center mr-4 -space-x-1"
          >
            <div
              class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb border-transparent ring-theme-background"
            >
              <span>
                <span
                  class="flex items-center leading-none"
                >
                  <span
                    class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                    style="width: 44px; height: 44px; border-radius: 50%;"
                  >
                    ‌
                  </span>
                  ‌
                </span>
              </span>
            </div>
            <div
              class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb border-transparent ring-theme-background"
            >
              <span>
                <span
                  class="flex items-center leading-none"
                >
                  <span
                    class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                    style="width: 44px; height: 44px; border-radius: 50%;"
                  >
                    ‌
                  </span>
                  ‌
                </span>
              </span>
            </div>
          </div>
          <span>
            <span
              class="flex items-center leading-none"
            >
              <span
                class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                style="width: 1px; height: 16px;"
              >
                ‌
              </span>
              ‌
            </span>
          </span>
        </div>
        <div
          class="flex items-center mt-4 space-x-1 h-7"
        >
          <span>
            <span
              class="flex items-center leading-none"
            >
              <span
                class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                style="width: 1px; height: 18px;"
              >
                ‌
              </span>
              ‌
            </span>
          </span>
          <span>
            <span
              class="flex items-center leading-none"
            >
              <span
                class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                style="width: 35px; height: 18px;"
              >
                ‌
              </span>
              ‌
            </span>
          </span>
        </div>
        <span
          class="flex items-center mt-1 h-4"
        >
          <span>
            <span
              class="flex items-center leading-none"
            >
              <span
                class="react-loading-skeleton css-1eg0sfo-skeletonStyles-Skeleton"
                style="width: 1px; height: 12px;"
              >
                ‌
              </span>
              ‌
            </span>
          </span>
        </span>
      </div>
      <div
        class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
      />
    </button>
  </div>
</div>
`;

exports[`Wallet Card should render with wallet data 1`] = `
<div>
  <div
    class="w-64 inline-block"
    data-testid="WalletCard__D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
  >
    <div
      class="h-48"
    >
      <button
        class="Cardstyles__CardButton-sc-ajtauu-0 jtRXYU"
        data-testid="Card"
        type="button"
      >
        <div
          class="flex relative flex-col justify-between p-5 h-full"
        >
          <div
            class="flex items-center space-x-4"
          >
            <div
              class="-space-x-1 whitespace-nowrap"
            >
              <div
                aria-label="ARK Devnet"
                class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700 ring-theme-background"
                data-testid="NetworkIcon-ARK-ark.devnet"
              >
                <div
                  class="sc-bdnxRM NjstW"
                  data-testid="NetworkIcon__icon"
                  height="20"
                  width="20"
                >
                  <svg>
                    ark.svg
                  </svg>
                </div>
              </div>
              <div
                class="Avatar__AvatarWrapper-sc-18vw8a4-0 kkxZqy flex-shrink-0"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                >
                  <img
                    alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  />
                </div>
              </div>
            </div>
            <span
              class="font-semibold truncate text-theme-secondary-text"
            >
              My wallet
            </span>
          </div>
          <span
            class="whitespace-nowrap mt-auto text-lg font-bold text-theme-text"
            data-testid="AmountCrypto"
          >
            33.75089801 DARK
          </span>
          <span
            class="inline-flex overflow-hidden mt-1 text-xs font-semibold whitespace-nowrap text-theme-secondary-text no-ligatures"
          >
            D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
          </span>
        </div>
        <div
          class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
        >
          <div
            class="inline-block p-1 text-theme-secondary-700"
            data-testid="WalletIcon__Ledger"
          >
            <div
              class="sc-bdnxRM NjstW"
              height="20"
              width="20"
            >
              <svg>
                ledger.svg
              </svg>
            </div>
          </div>
          <div
            class="inline-block p-1 text-theme-warning-400"
            data-testid="WalletIcon__Starred"
          >
            <div
              class="sc-bdnxRM NjstW"
              height="20"
              width="20"
            >
              <svg>
                star-filled.svg
              </svg>
            </div>
          </div>
          <div
            class="inline-block p-1 text-theme-secondary-700"
            data-testid="WalletIcon__Multisignature"
          >
            <div
              class="sc-bdnxRM NjstW"
              height="20"
              width="20"
            >
              <svg>
                multisignature.svg
              </svg>
            </div>
          </div>
          <div
            class="inline-block p-1 text-theme-secondary-700"
            data-testid="WalletIcon__TestNetwork"
          >
            <div
              class="sc-bdnxRM NjstW"
              height="20"
              width="20"
            >
              <svg>
                code.svg
              </svg>
            </div>
          </div>
        </div>
      </button>
    </div>
  </div>
  ,
</div>
`;

exports[`Wallet Card should render with wallet data and optional icon 1`] = `
<div>
  <div
    class="w-64 inline-block"
    data-testid="WalletCard__D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
  >
    <div
      class="h-48"
    >
      <button
        class="Cardstyles__CardButton-sc-ajtauu-0 jtRXYU"
        data-testid="Card"
        type="button"
      >
        <div
          class="flex relative flex-col justify-between p-5 h-full"
        >
          <div
            class="flex items-center space-x-4"
          >
            <div
              class="-space-x-1 whitespace-nowrap"
            >
              <div
                aria-label="ARK Devnet"
                class="Circle__CircleWrapper-sc-d5u41q-0 cFnCcb text-theme-secondary-700 border-theme-secondary-300 dark:border-theme-secondary-700 ring-theme-background"
                data-testid="NetworkIcon-ARK-ark.devnet"
              >
                <div
                  class="sc-bdnxRM NjstW"
                  data-testid="NetworkIcon__icon"
                  height="20"
                  width="20"
                >
                  <svg>
                    ark.svg
                  </svg>
                </div>
              </div>
              <div
                class="Avatar__AvatarWrapper-sc-18vw8a4-0 kkxZqy flex-shrink-0"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full inline-flex items-center justify-center overflow-hidden align-middle rounded-full"
                >
                  <img
                    alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                    title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  />
                </div>
              </div>
            </div>
            <span
              class="font-semibold truncate text-theme-secondary-text"
            >
              My wallet
            </span>
          </div>
          <span
            class="whitespace-nowrap mt-auto text-lg font-bold text-theme-text"
            data-testid="AmountCrypto"
          >
            33.75089801 DARK
          </span>
          <span
            class="inline-flex overflow-hidden mt-1 text-xs font-semibold whitespace-nowrap text-theme-secondary-text no-ligatures"
          >
            D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD
          </span>
        </div>
        <div
          class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
        >
          <div
            class="inline-block p-1 text-theme-secondary-700"
            data-testid="WalletIcon__Ledger"
          >
            <div
              class="sc-bdnxRM NjstW"
              height="20"
              width="20"
            >
              <svg>
                ledger.svg
              </svg>
            </div>
          </div>
          <div
            class="inline-block p-1 text-theme-warning-400"
            data-testid="WalletIcon__Starred"
          >
            <div
              class="sc-bdnxRM NjstW"
              height="20"
              width="20"
            >
              <svg>
                star-filled.svg
              </svg>
            </div>
          </div>
          <div
            class="inline-block p-1 text-theme-secondary-700"
            data-testid="WalletIcon__Multisignature"
          >
            <div
              class="sc-bdnxRM NjstW"
              height="20"
              width="20"
            >
              <svg>
                multisignature.svg
              </svg>
            </div>
          </div>
          <div
            class="inline-block p-1 text-theme-secondary-700"
            data-testid="WalletIcon__TestNetwork"
          >
            <div
              class="sc-bdnxRM NjstW"
              height="20"
              width="20"
            >
              <svg>
                code.svg
              </svg>
            </div>
          </div>
        </div>
      </button>
    </div>
  </div>
</div>
`;
